--- a/index.html
+++ b/index.html
@@ -16,25 +16,9 @@
       height: 100%;
       object-fit: cover;
     }
-    #overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.7);
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 2em;
-      cursor: pointer;
-      z-index: 10;
-    }
   </style>
 </head>
 <body>
-  <div id="overlay">Click to Play Video</div>
   <video id="myVideo" loop>
     <source src="https://shattereddisk.github.io/rickroll/rickroll.mp4" type="video/mp4">
     Your browser does not support the video tag.
@@ -42,12 +26,15 @@
 
   <script>
     const video = document.getElementById('myVideo');
-    const overlay = document.getElementById('overlay');
 
-    overlay.addEventListener('click', () => {
-      video.play();  // Start video with sound
-      overlay.style.display = 'none'; // Hide overlay
-    });
+    function playVideoOnInteraction() {
+      video.play().catch(err => console.log(err)); // catch errors
+      // Remove the event listener after first interaction
+      window.removeEventListener('mousemove', playVideoOnInteraction);
+    }
+
+    // Listen for first mouse movement
+    window.addEventListener('mousemove', playVideoOnInteraction);
   </script>
 </body>
 </html>
